fixed bug in content-length : should be bytes not characters

--- a/samp/html/demo.html
+++ b/samp/html/demo.html
@@ -600,7 +600,7 @@ function init() {
     div.updateFieldControl.editing>input.edited { display: inline; background-color:yellow; }
     div.updateFieldControl.editing>span { display: none; }
     span.showField {  }
-    .template { display: none }
+    .templates { display: none }
 
     section { margin-left: 2em; }
     #scenario th { text-align: right ; }
@@ -755,7 +755,7 @@ function init() {
     </section>
   </body>
 
-  <section class="template" id="templates">
+  <section class="templates">
     <table>
 
       <tr id="employee-row">
