fixed bug in content-length : should be bytes not characters

--- a/samp/html/index.html
+++ b/samp/html/index.html
@@ -447,7 +447,7 @@
 
   </head>
   <body onLoad="init()">
-    <h1>Production Simulation</h1>
+    <h1>App Login</h1>
     <div id="message"></div>
       Login : <input type="text" placeholder="username" id="un"> <input type="password" placeholder="password" id="pw">
     <button type="button" id="login">Log In</button>     <button type="button" id="create">create account</button>
